# lua-simple-fcgi

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  lsf.c  lsf.h  main.c
cmake/: FindFcgi.cmake  FindLua.cmake
examples/lua/page/: layout.html  main.lua  markdown.lua  util.lua
examples/lua/page/pages/: 404.md  home.md  how.md  why.md
examples/nginx/: nginx.conf
examples/scripts/: test.lua
test/: no_accept.lua  start.lua  start_fail.lua
